syntax="proto3";
option go_package = "./main";

service broker {
  rpc ReadResources (ReadRequest) returns (ReadResponse);
  rpc RemoveCluster (RemoveRequest) returns (RemoveResponse);
}

message ReadRequest {
  string originator = 1;
}

message ReadResponse {
  map<string, string> resources = 1; // Use Quantity.UnmarshalJSON().
}

message RemoveRequest {
  string cluster = 1;
}

message RemoveResponse {
}
